# mch2022-firefly-app

./: .gitignore  .gitmodules  Makefile  sao_rom.py  sao_rom.txt  sdkconfig
main/: CMakeLists.txt  main.c  sao_eeprom.c
main/include/: sao_eeprom.h
